# clinical-data-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: parser.py  schemas.py  utils.py
src/extractors/: gemini_instructor.py  llama_cloud_extractor.py
src/parsers/: llama_cloud_parser.py
